Fixed Sidebar title cutoff

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@
 
 #sidebar .sidebar-header h3 {
   display: block;
+  font-size: medium;
 }
 
 #sidebar .sidebar-header strong {
